Añadida lógica para obtener gravedad incidente
